--- a/JiakSiMi/app/src/main/res/layout/food_list_view.xml
+++ b/JiakSiMi/app/src/main/res/layout/food_list_view.xml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-    android:id = "@+id/foodViewLayout"
-    android:layout_width = "match_parent"
-    android:layout_height = "wrap_content"
-    android:clickable = "true"
-    android:orientation = "vertical"
-    android:background="?attr/selectableItemBackground">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id = "@+id/foodNameTextView"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:background = "?attr/selectableItemBackground"
-        android:padding = "8dp"
-        android:paddingStart = "8dp"
-        android:text = "Food Name"
-        android:textSize = "24sp" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/foodViewLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/foodNameTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="?attr/selectableItemBackground"
+            android:padding="8dp"
+            android:paddingStart="8dp"
+            android:text="Food Name"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/deleteIV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/deleteIV"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
-        android:id = "@+id/divider4"
-        android:layout_width = "match_parent"
-        android:layout_height = "2dp"
-        android:background = "#3F999999" />
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#3F999999" />
 
-</LinearLayout >
+</LinearLayout>
