--- a/JiakSiMi/app/src/main/res/values/colors.xml
+++ b/JiakSiMi/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources >
-    <color name = "colorPrimary" >#C90000</color >
-    <color name = "colorPrimaryDark" >#880000</color >
-    <color name = "colorAccent" >#FFB500</color >
-</resources >
+<resources>
+    <color name="colorPrimary">#CF0000</color>
+    <color name="colorPrimaryDark">#8B0000</color>
+    <color name="colorAccent">#FFA200</color>
+</resources>
