--- a/JiakSimi/app/src/main/res/layout/fragment_randomizer.xml
+++ b/JiakSimi/app/src/main/res/layout/fragment_randomizer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Randomizer"
+    tools:context=".Ui.Randomizer"
     android:id="@+id/constraintLayout">
 
 
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Lunch:"
+        android:text="@string/rand_item_1"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/lunchRandButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Randomize"
+        android:text="@string/randomize"
         android:textAllCaps="true"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/lunchTextView"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="Meat:"
+        android:text="@string/menu_sub_tab_2"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lunchLabel"
@@ -50,7 +50,7 @@
         android:id="@+id/meatRandButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Randomize"
+        android:text="@string/randomize"
         android:textAllCaps="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/meatTextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +64,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/lunchLabel"
         app:layout_constraintEnd_toStartOf="@+id/lunchRandButton"
@@ -78,6 +79,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/meatLabel"
         app:layout_constraintEnd_toStartOf="@+id/meatRandButton"
@@ -92,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="Veg:"
+        android:text="@string/menu_sub_tab_3"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meatLabel"
@@ -106,6 +108,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/vegLabel"
         app:layout_constraintEnd_toStartOf="@+id/vegRandButton"
@@ -119,7 +122,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="Soup:"
+        android:text="@string/menu_sub_tab_4"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vegLabel"
@@ -133,6 +136,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/soupLabel"
         app:layout_constraintEnd_toStartOf="@+id/soupRandButton"
@@ -144,7 +148,7 @@
         android:id="@+id/vegRandButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Randomize"
+        android:text="@string/randomize"
         android:textAllCaps="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/vegTextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,7 +159,7 @@
         android:id="@+id/soupRandButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Randomize"
+        android:text="@string/randomize"
         android:textAllCaps="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/soupTextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +173,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="8dp"
-        android:text="Randomize All"
+        android:text="@string/randomize_all"
         android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.456"
