--- a/JiakSiMi/app/src/main/res/values/ic_launcher_background.xml
+++ b/JiakSiMi/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#CC1B00</color>
+    <color name="ic_launcher_background">#CF0000</color>
 </resources>
